Resolve "Installer und Distribution"